<resources>
    <string name="app_name">Maestro Clientes Swikar</string>
    <string name="clientName">Nombre del cliente</string>
    <string name="clientNit">NIT</string>
    <string name="clientSecurityNit">Codigo de seguridad NIT</string>
    <string name="clientAddress">Dirección</string>
    <string name="clientPhone">Teléfono</string>
    <string name="clientCity">Ciudad</string>
    <string name="ClientDepartment">Departamento</string>
    <string name="clientContact">Contacto</string>
    <string name="clientComment">Instrucción especial</string>
    <string name="addClientBtn">Agregar</string>
    <string name="cancelBtn">Cancelar</string>
    <string name="clientFormTitle">Agregar un cliente</string>
    <string name="clientFormName">Nombre del cliente</string>
    <string name="clientFormNit">NIT</string>
    <string name="clientFormSecutiryNit">Código de seguridad NIT</string>
    <string name="clientFormAddr">Dirección</string>
    <string name="clientFormPhone">Teléfono</string>
    <string name="clientFormCity">Ciudad</string>
    <string name="clientFormDepartment">Departamento</string>
    <string name="clientFormContact">Contacto</string>
    <string name="clientFormComment">Instrucción especial</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
</resources>
